# DDPG-VRep-RL

./: .gitignore  CMakeLists.txt  README.md  callbacks.xml  junk.py  main.py  motiongeneration.cpp  plugin.cpp  plugin_bak.cpp  requirements.txt  simMotionQuadRL.lua  trajrunnable.cpp  working_on.py
TrajGenerator/: pathGeneration.lua  trajrunnable.cpp  trajrunnable.h
ddpg_plugin/: generate_sample.cpp  generate_sample.h  keras_model.cc  keras_model.h
examples/: ._curriculum_learning.py  ._hover_with_vertical_force.py  ._multiQuad_func_prog.py  ._multi_quadrotors.py  ._multi_quadrotors_old.py  ._path_following_single_quad.py  ._path_record_single_quad.py  ._track_with_full_control.py  __init__.py  curriculum_learning.py  hover_with_vertical_force.py  multiQuad_func_prog.py  multi_quadrotors.py  multi_quadrotors_old.py  path_following_single_quad.py  path_record_single_quad.py  track_with_full_control.py
include/: header.h  motiongeneration.h  trajrunnable.h
models/: .___init__.py  __init__.py  ac_v1.py
models/json/: ._actor.json  ._actor2.json  actor.json  actor2.json
rl/: core.py
rl/agents/: dqn.py
task/: MultiQuadPathFollow.py  QuadHover.py  QuadPathFollow.py  QuadTrack.py  __init__.py  curriculum_learning.py
